--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.17.0",
-    "phaser": "^3.70.0",
+    "pixi.js": "^8.14.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "viem": "^2.7.0",
@@ -36,4 +36,3 @@
     "phaser"
   ]
 }
-
