--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@farcaster/miniapp-sdk": "^0.2.1",
     "@tanstack/react-query": "^5.17.0",
     "pixi.js": "^8.14.3",
     "react": "^18.2.0",
