--- a/contracts/package.json
+++ b/contracts/package.json
@@ -15,10 +15,10 @@
     "@nomicfoundation/hardhat-toolbox": "^4.0.0",
     "@nomicfoundation/hardhat-verify": "^2.0.0",
     "@openzeppelin/contracts": "^5.0.0",
+    "@types/node": "^20.0.0",
     "hardhat": "^2.19.0",
-    "typescript": "^5.3.0",
     "ts-node": "^10.9.0",
-    "@types/node": "^20.0.0"
+    "typescript": "^5.3.0"
   },
   "keywords": [
     "base",
@@ -27,6 +27,8 @@
     "flappy-bird",
     "leaderboard"
   ],
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "dotenv": "^17.2.3"
+  }
 }
-
