--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
+    "@vercel/node": "^5.5.16",
     "@vitejs/plugin-react": "^4.2.0",
     "autoprefixer": "^10.4.17",
     "postcss": "^8.4.33",
